clusterloader2/pkg/prometheus/manifests/kube-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: kube-proxy
  labels:
    k8s-app: kube-proxy
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http-metrics
      port: 10249
  selector:
    component: kube-proxy
