clusterloader2/pkg/prometheus/manifests/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app.kubernetes.io/managed-by: prometheus-operator
    prometheus: k8s
  sessionAffinity: ClientIP
