clusterloader2/pkg/prometheus/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "0"
    name: proxy-perf-0
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "0"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "1"
    name: proxy-perf-1
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "1"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "2"
    name: proxy-perf-2
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "2"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "3"
    name: proxy-perf-3
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "3"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "4"
    name: proxy-perf-4
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "4"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "5"
    name: proxy-perf-5
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "5"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "6"
    name: proxy-perf-6
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "6"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "7"
    name: proxy-perf-7
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "7"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "8"
    name: proxy-perf-8
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "8"
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      index: "9"
    name: proxy-perf-9
    namespace: default
  spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 8444
    selector:
      index: "9"
  status:
    loadBalancer: {}
kind: ServiceList
metadata: {}
