clusterloader2/pkg/prometheus/manifests/webhooks.yaml
apiVersion: admissionregistration/v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-0
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpJNFdoY05NekF3TlRBNU1UYzBOekk0V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUMyMUM4ZUl3a1pVU3BrdXhKKzdsdmx1MXFHRFJLZ2k3OEJ1Z0ZMOUorck9ocFUKQWYwN01MempSU29vK0pKcnhwNjdZQncvNnhTKzNqaFlEWjd6cnd4UnA1UjZmdVZtcEJOTUxNYkg1TW43RXloQgpYZlUyK1Z6UzlP [...]
      service:
        name: proxy-perf-0
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-0.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-1
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpJNFdoY05NekF3TlRBNU1UYzBOekk0V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUM5V3lINytqeit2Y014OVA2c1BwWDQxN1pzcnJ4dlhmS3dmS3AzU2J1UGltcEoKajNYQ2Q2T2VHQ0hjMis2SThGVUQyUVZ3aENiS0cvZXNKcDVFdU1rUU1uMWhhSW9wVnFOc20wRG1qUUM4UkdxTwpubXAxdDg4M2du [...]
      service:
        name: proxy-perf-1
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-1.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-2
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpJNFdoY05NekF3TlRBNU1UYzBOekk0V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUR6NHNsSDJWdFdxaG12TG16SUw0RXlXNTkzcXc1RlNSVnN3QkJaUXVqZml5UDIKcVlHL2ZmLytrelNiZFhqVVlkUldQOXFsUTduMWVyOVNUSkpYSnF6TUk0dGZZTTZXbFZBd0htTmt6K3RHeko3eAp2UGNDSzZJYzBi [...]
      service:
        name: proxy-perf-2
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-2.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-3
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpJNVdoY05NekF3TlRBNU1UYzBOekk1V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURURDdMZGpIN0haRmlGakI1bGlIR2tGL0YzOFVyTXpwR01IYmprSjV5bFBNUnUKaGJ0OVY2WEVHQUlRUlhQcnBnckpVVExWcVhnc3JQYUs2bUwrQzdEck1rbWJVT2dzZjhLY2tscUNRUDRBMWR5Mgp5QkE4aXh0UEdB [...]
      service:
        name: proxy-perf-3
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-3.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-4
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNd1doY05NekF3TlRBNU1UYzBOek13V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNzMzFucWZHUkdaVkY2cHhuMFEwK0piOEtGQlcvQlBJaDVBSVBUMXRjeFlHTkEKTnlMc2VxVnkrTmhVQ0dFNUNyR2MwZWZMSVVFUWhqQmd4SVZ4TGhOaFdnbWVpVUlCclhpTktEWGdxN0ljQ3BTRQoyZmJ3enVkZ3VW [...]
      service:
        name: proxy-perf-4
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-4.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-5
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNd1doY05NekF3TlRBNU1UYzBOek13V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURWS25QY2VDbWhrS05TRGt2U1N4Y21mWldBNkJ4dzVjYjlOeEFVbUdQbEY5RTAKQyt2WEw0VE5uVGlBWG1Ub1hRelhsTm05T3RoNHB2di9MSWZGcERYcldhdnExNDdnUXNFZ2FQVTNNb1NRUlRkUgpLcGU4bVMzQmR6 [...]
      service:
        name: proxy-perf-5
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-5.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-6
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNeFdoY05NekF3TlRBNU1UYzBOek14V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURZeVJvU2NZZlNLaEE1N21sSzFDM0hPSm1ON3plblQ5QTkxSmFUYnFEc3JjY2cKNVYxVENSSUUxMXJOYWlObXVsK0tQVlBSVGpBcktselEvaEhvWFFWamM3RXBSbDFHTnpRaXBmUnBwaCs5Qy9UbQpFTjUrMWZ6Q1VL [...]
      service:
        name: proxy-perf-6
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-6.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-7
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNeFdoY05NekF3TlRBNU1UYzBOek14V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURVc2daeVNCUjFieWNVd2pmeWFEMzVGL0hMa3RtWUFoaXJISk9KMG92QnowcHEKZ0tTWVl3TTIzcG0wMkFvc2NrNWFhUVFLYVlZNU1ZVnFHZzZFU1FYSkRPUTI2bUJZWS9yUzduK0V2c1YvMUlqWApYdi9wQmNTRis0 [...]
      service:
        name: proxy-perf-7
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-7.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-8
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNeVdoY05NekF3TlRBNU1UYzBOek15V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUURma0UvYjE2NmtTKzMyeG1aY05TTkllZkpmV2NiUGJEaXBNVjR5b0RvSVBxWUQKdWszRWJJQjI0dUVTaEg0TDZyUTU1SGxMNTI2dEN3Q0o5Rzl2ZGs4Q0VZQUFESm9VZUUwQkZtZThKL3VkbllENQo5RDhzUG1SWFpa [...]
      service:
        name: proxy-perf-8
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-8.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    creationTimestamp: null
    name: proxy-perf-9
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyRENDQWNDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFkTVJzd0dRWURWUVFERXhKbE1tVXQKYzJWeWRtVnlMV05sY25RdFkyRXdIaGNOTWpBd05URXhNVGMwTnpNeVdoY05NekF3TlRBNU1UYzBOek15V2pBZApNUnN3R1FZRFZRUURFeEpsTW1VdGMyVnlkbVZ5TFdObGNuUXRZMkV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBCkE0SUJEd0F3Z2dFS0FvSUJBUUNwbDJRMEFBQk9VY0JqdXM5RldFR2ZDTW5UT0grcytYZEFjRUR3T2tiYmRhdDQKdXpVSEpoOGVpUGQwQnFhdHdFWjBORktRRTVXQzZtY0wvZFpvSU5MamRPYkVXd0RaUklZcEovQkJGaXJVSlJtaAoxS2xYdkhFY1Jl [...]
      service:
        name: proxy-perf-9
        namespace: default
        path: /mutating-configmaps
        port: 8443
    name: proxy-perf-9.k8s.io
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - configmaps
    sideEffects: None
kind: MutatingWebhookConfigurationList
metadata: {}
